--- a/elizabeth.css
+++ b/elizabeth.css
@@ -38,8 +38,8 @@ ul {
     color: white;
 }
 
-.titleText {
+.bottom-left {
   position: absolute;
   bottom: 8px;
-  right: 16px;
+  left: 16px;
 }
